WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34210
[Qt] Display page loading progress inside the QtLauncher location bar
https://bugs.webkit.org/show_bug.cgi?id=34210
Summary
[Qt] Display page loading progress inside the QtLauncher location bar
Andreas Kling
Reported
2010-01-27 02:56:45 PST
[Qt] Display page loading progress inside the QtLauncher location bar
Attachments
Patch
(4.34 KB, patch)
2010-01-27 03:13 PST
,
Andreas Kling
hausmann
: review-
hausmann
: commit-queue-
Details
Formatted Diff
Diff
Patch, issues addressed + LocationEdit class moved to its own file
(7.89 KB, patch)
2010-01-29 06:02 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Same patch, one accidental \t expanded
(7.90 KB, patch)
2010-01-29 06:05 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Same patch yet again, style issue fixed
(7.90 KB, patch)
2010-01-29 06:26 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-01-27 03:13:24 PST
Created
attachment 47514
[details]
Patch
Simon Hausmann
Comment 2
2010-01-27 08:00:37 PST
Comment on
attachment 47514
[details]
Patch
> +class LocationEdit : public QLineEdit { > + Q_OBJECT > +public: > + LocationEdit(QWidget *parent = 0)
Coding style: * placement is wrong.
> +protected: > + virtual void paintEvent(QPaintEvent *event)
Ditto.
> +#ifndef Q_WS_MAEMO_5 > statusBar()->showMessage(link); > +#endif > #ifndef QT_NO_TOOLTIP > if (!toolTip.isEmpty()) > QToolTip::showText(QCursor::pos(), toolTip); > @@ -410,7 +453,9 @@ protected slots: > QWebElementCollection result = view->page()->mainFrame()->findAllElements(str); > foreach (QWebElement e, result) > e.setStyleProperty("background-color", "yellow"); > +#ifndef Q_WS_MAEMO_5 > statusBar()->showMessage(QString("%1 element(s) selected").arg(result.count()), 5000); > +#endif
While I agree with the above two hunks (the flicker in the status bar is annoying), but technically that's unrelated to the progress bar stuff, no? I suggest to mention it at least in the changelog. The rest looks good to me :)
Andreas Kling
Comment 3
2010-01-29 06:02:23 PST
Created
attachment 47709
[details]
Patch, issues addressed + LocationEdit class moved to its own file
Andreas Kling
Comment 4
2010-01-29 06:05:02 PST
Created
attachment 47710
[details]
Same patch, one accidental \t expanded
WebKit Review Bot
Comment 5
2010-01-29 06:06:41 PST
Attachment 47710
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKitTools/QtLauncher/locationedit.cpp:28: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 6
2010-01-29 06:26:56 PST
Created
attachment 47714
[details]
Same patch yet again, style issue fixed
WebKit Review Bot
Comment 7
2010-01-29 06:31:47 PST
Attachment 47714
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKitTools/QtLauncher/locationedit.cpp:28: Found header this file implements before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8
2010-01-29 08:49:45 PST
Comment on
attachment 47714
[details]
Same patch yet again, style issue fixed Clearing flags on attachment: 47714 Committed
r54065
: <
http://trac.webkit.org/changeset/54065
>
WebKit Commit Bot
Comment 9
2010-01-29 08:49:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug