2010-01-29  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Display page loading progress inside the QtLauncher location bar

        https://bugs.webkit.org/show_bug.cgi?id=34210

        * QtLauncher/QtLauncher.pro:
        * QtLauncher/locationedit.cpp: Added.
        (LocationEdit::LocationEdit):
        (LocationEdit::setProgress):
        (LocationEdit::paintEvent):
        * QtLauncher/locationedit.h: Added.
        * QtLauncher/mainwindow.cpp:
        (MainWindow::buildUI):
        * QtLauncher/mainwindow.h:

Canonical link: https://commits.webkit.org/45432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54065 268f45cc-cd09-0410-ab3c-d52691b4dbfc